[package]
name = "redditfs"
version = "0.1.0"
authors = ["Arwin Neil Baichoo <arwinneil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.4.0"
libc = "0.2.77"
reqwest = {version = "0.10.8", features = ["blocking"]}
serde_json = "1.0.52"
convert_case = "0.4.0"